# tycho

./: .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CurrentStateAndFutureWork.md  LICENSE.txt  PLAN.md  PR23_REVIEW.md  PR23_REVIEW_PLAN.md  README.md  TODO.md  TypeStorageProblems.md  build.ps1  build_wheel.ps1  configure.ps1  get_trace.ps1  pyproject.toml  run_examples.py  setup.py
bench/cpp/: CMakeLists.txt  bench_cheb.cpp  bench_common.h  bench_enzyme.cpp  bench_enzyme_mee_hessian.cpp  bench_init.cpp  bench_odes.h  bench_phases.h
examples/cpp_examples/: CMakeLists.txt
extensions/: ASSET_Extensions.cpp  ASSET_Extensions.h  CMakeLists.txt  Tycho_Extensions.cpp  Tycho_Extensions.h
extensions/Bindings/: TychoExtensionsBind.cpp
src/: CMakeLists.txt  Tycho.h  main.cpp  pch.cpp  pch.h  tycho_internal.h
src/Astro/: ASSET_Astro.cpp  ASSET_Astro.h  CR3BPModel.h  CR3BPUtils.h  J2.h  KeplerModel.cpp  KeplerModel.h  KeplerPropagator.h  KeplerUtils.cpp  KeplerUtils.h  LambertSolvers.cpp  LambertSolvers.h  MEEDynamics.h  ThrusterModels.h  Tycho_Astro.cpp  Tycho_Astro.h  lambert_solvers.cpp
src/Bindings/: ArgsSegBuildPart4.cpp  ArgsSegBuildPart5.cpp  BulkOperationsBuild.cpp  BumpAllocatorBind.cpp  BumpAllocatorBind.h  CMakeLists.txt  CommonFunctionsBind.h  DenseFunctionBaseBind.h  FreeFunctionsBuild.cpp  FunctionRegistry.h  GenericFunctionBind.h  GenericODESBuildPart1.cpp  GenericODESBuildPart2.cpp  GenericODESBuildPart3.cpp  GenericODESBuildPart4.cpp  GenericODESBuildPart5.cpp  GenericODESBuildPart6.cpp  IntegratorBind.h  InterpTableBind.h  KeplerModel.cpp  KeplerUtils.cpp  LGLInterpTableBind.cpp  LambertSolversBind.cpp  MatrixFunctionBuild.cpp  MemoryManagerBind.cpp  MemoryManagerBind.h  MeshIterateInfoBind.cpp  MeshIterateInfoBind.h  ODEBind.h  ODEPhaseBaseBind.cpp  ODEPhaseBind.h  ODESizesBind.h  OptimalControlProblemBind.cpp  OptimizationProblemBase.cpp  OptimizationProblemBind.cpp  PSIOPTBind.cpp  PSIOPTBind.h  PythonArgParsing.cpp  PythonFunctions.h  TychoModule.cpp  (+10 more)
src/Integrators/: Integrator.h  RKCoeffs.h  RKSteppers.h  Tycho_Integrators.h  tycho_integrators.h
src/OptimalControl/: ASSET_OptimalControl.cpp  ASSET_OptimalControl.h  AutoScalingUtils.h  Blocked_ODE_Wrapper.h  FDCoeffs.h  FDDerivArbitrary.h  FDDerivUniform.h  GenericODESBuildPart1.cpp  GenericODESBuildPart2.cpp  GenericODESBuildPart3.cpp  GenericODESBuildPart4.cpp  GenericODESBuildPart5.cpp  GenericODESBuildPart6.cpp  InterfaceTypes.h  LGLCoeffs.h  LGLControlSplines.h  LGLDefects.h  LGLIntegrals.h  LGLInterpFunctions.h  LGLInterpTable.cpp  LGLInterpTable.h  LinkFunction.h  MeshIterateInfo.h  MeshSpacingConstraints.h  ODE.h  ODEArguments.h  ODEPhase.h  ODEPhaseBase.cpp  ODEPhaseBase.h  ODEPhaseBaseBind.cpp  ODESizes.h  OptimalControlFlags.h  OptimalControlFwdDecl.h  OptimalControlProblem.cpp  OptimalControlProblem.h  OptimalControlProblemBind.cpp  PhaseIndexer.cpp  PhaseIndexer.h  RuntimeODE.cpp  ShootingDefects.h  (+12 more)
src/Solvers/: ASSET_Solvers.h  AccelerateInterface.h  AccelerateUtils.h  ConstraintFunction.h  IterateInfo.h  Jet.h  MKLInit.cpp  MKLInit.h  MumpsInterface.h  NonLinearProgram.cpp  NonLinearProgram.h  ObjectiveFunction.h  OptimizationProblem.cpp  OptimizationProblem.h  OptimizationProblemBase.cpp  OptimizationProblemBase.h  PSIOPT.cpp  PSIOPT.h  PardisoInterface.h  SolverFlags.h  SolverFunctionBase.h  SolverInit.cpp  SolverInit.h  Tycho_Solvers.h  non_linear_program.cpp  psiopt.cpp  solver_init.cpp
src/TypeDefs/: EigenTypes.h  Tycho_TypeDefs.h
src/Utils/: ASSET_Utils.h  BenchUtils.h  CRTPBase.h  ColorText.cpp  ColorText.h  EigenSTL.h  FlatMap.h  FunctionReturnType.h  GetCoreCount.cpp  GetCoreCount.h  LambdaJumpTable.h  MathFunctions.h  MemoryManagement.cpp  MemoryManagement.h  STDExtensions.h  SizingHelpers.h  ThreadPool.cpp  ThreadPool.h  Timer.h  TupleIterator.h  Tycho_Utils.h  TypeErasure.h  TypeName.h  TypeStorage.h  color_text.cpp  color_text.h  fmtlib.cpp  fmtlib.h  get_core_count.cpp  memory_management.cpp  thread_pool.cpp  tycho_utils.h
src/VectorFunctions/: ASSET_VectorFunctions.cpp  ASSET_VectorFunctions.h  ArgsSegBuildPart1.cpp  ArgsSegBuildPart2.cpp  ArgsSegBuildPart3.cpp  ArgsSegBuildPart4.cpp  ArgsSegBuildPart5.cpp  AssigmentTypes.h  BinaryMath.h  BulkOperationsBuild.cpp  Computable.h  ComputableBase.h  DenseDerivatives.h  DenseFunction.h  DenseFunctionBase.h  DenseFunctionOperations.h  DenseScalarFunctionBase.h  DetectDiagonal.h  DetectSuperScalar.h  FreeFunctionsBuild.cpp  FunctionDomains.cpp  FunctionDomains.h  FunctionRegistry.h  FunctionTemplates.h  FunctionTypeDefMacros.h  FunctionalFlags.h  IndexingData.h  InputOuputSize.h  MathOverloads.h  MatrixFunctionBuild.cpp  ObjectDetectors.h  OperatorOverloads.h  PythonArgParsing.cpp  PythonArgParsing.h  SparseFunctionBase.h  Tycho_VectorFunctions.cpp  Tycho_VectorFunctions.h  VectorFunction.h  VectorFunctionBuildPart1.cpp  VectorFunctionBuildPart2.cpp  (+2 more)
src/astro/: accelleration_models.cpp  lambert_solvers.cpp  tycho_astro.h
src/bindings/: CMakeLists.txt  bump_allocator_bind.cpp  bump_allocator_bind.h  function_registry.h  pch_nb.h  tycho_module.cpp  type_casters.h  utils_bind.cpp  vector_functions_bind.h
src/integrators/: extern_template_instantiations.cpp  tycho_integrators.h
src/optimal_control/: extern_template_instantiations.cpp  lgl_interp_table.cpp  ode_phase_base.cpp  optimal_control_problem.cpp  phase_indexer.cpp  runtime_ode.cpp  tycho_optimal_control.h
src/solvers/: non_linear_program.cpp  optimization_problem.cpp  psiopt.cpp  psiopt_print.cpp  solver_init.cpp  tycho_solvers.h
src/utils/: color_text.cpp  color_text.h  eigen_stl.h  fmtlib.cpp  fmtlib.h  get_core_count.cpp  memory_management.cpp  thread_pool.cpp
src/vf/: extern_template_instantiations.cpp  function_domains.cpp  tycho_vector_functions.h
tests/cpp/: CMakeLists.txt  test_astro.cpp  test_common_functions.cpp  test_generic_function.cpp  test_integrators.cpp  test_memory_management.cpp  test_optimal_control.cpp  test_solvers.cpp  test_thread_pool.cpp  (+5 more)
(+1421 files in other folders)
